--- a/Styles/demo.scss
+++ b/Styles/demo.scss
@@ -59,3 +59,20 @@ footer{
 .align{
     text-align: $centerAlign;
 }
+
+.btn{
+    border: 1px solid black;
+    text-align: center;
+    padding: 10px 20px;
+    font-style: italic;
+    font-size: 20px;
+    cursor: pointer;
+}
+.btn-download{
+    @extend .btn;
+    background-color: green;
+}
+.btn-learn{
+    @extend .btn;
+    background-color: red;
+}
